--- a/index.html
+++ b/index.html
@@ -13,5 +13,13 @@
   <h3>tomi bika</h3> 
   <p>sjsdhdjjcdjf jddjjj</p>
   <h3>mammaka billa</h3>
+  <h6>To https://github.com/abulkhairbd/kaka.git
+    ! [rejected]        khair -> khair (fetch first)
+   error: failed to push some refs to 'https://github.com/abulkhairbd/kaka.git'
+   hint: Updates were rejected because the remote contains work that you do
+   hint: not have locally. This is usually caused by another repository pushing
+   hint: to the same ref. You may want to first integrate the remote changes
+   hint: (e.g., 'git pull ...') before pushing again.
+   hint: See the 'Note about fast-forwards' in 'git push --help' for details.</h6>
 </body>
 </html>
