--- a/index.html
+++ b/index.html
@@ -5,12 +5,40 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>kaka</title>
+  <style> 
+   h1{
+     color: blue;
+     font-size: 40px;
+   }
+.fontsize:hover{
+  color: brown;
+  font-size: 50px;
+}
+
+
+  h6{
+    font-size: 50px;
+    font-family: 'Times New Roman', Times, serif;
+    color: red;
+    background-color: gold;
+    font-style: italic;
+  }
+
+  h6:hover{
+    font-size: 80px;
+    color: chocolate;
+    background-color:greenyellow;
+  }
+   
+  
+
+</style>
 
 </head>
 <body>
   <h1>mahabub and alam</h1>
-  <h2>najib tomo gomayona</h2>
-  <h3>tomi bika</h3> 
+  <h1 class="fontsize">najib tomo gomayona</h1>
+  <h1>tomi bika</h1> 
   <p>sjsdhdjjcdjf jddjjj</p>
   <h3>mammaka billa</h3>
   <h6>To https://github.com/abulkhairbd/kaka.git
